--- a/Docker-compose.yml
+++ b/Docker-compose.yml
@@ -23,8 +23,8 @@ services:
       REACT_APP_BACKEND_URL: "https://4567-${GITPOD_WORKSPACE_ID}.${GITPOD_WORKSPACE_CLUSTER_HOST}"
       REACT_APP_AWS_PROJECT_REGION: "${AWS_DEFAULT_REGION}"
       REACT_APP_AWS_COGNITO_REGION: "${AWS_DEFAULT_REGION}"
-      REACT_APP_AWS_USER_POOLS_ID: "us-east-1_pPl48t1MB"
-      REACT_APP_CLIENT_ID: "4s859pgap0jnnpr133aulut4hi"
+      REACT_APP_AWS_USER_POOLS_ID: "us-east-1_88bFpmAli"
+      REACT_APP_CLIENT_ID: "76hro8bm7fb2mkn2t907s92lmt"
     build: ./frontend-react-js
     ports:
       - "3000:3000"
