--- a/Docker-compose.yml
+++ b/Docker-compose.yml
@@ -13,6 +13,8 @@ services:
       AWS_ACCESS_KEY_ID: "${AWS_ACCESS_KEY_ID}"
       AWS_SECRET_ACCESS_KEY: "${AWS_SECRET_ACCESS_KEY}"
       ROLLBAR_ACCESS_TOKEN: "${ROLLBAR_ACCESS_TOKEN}"
+      AWS_COGNITO_USER_POOL_ID: "us-east-1_88bFpmAli"
+      AWS_COGNITO_USER_POOL_CLIENT_ID: "76hro8bm7fb2mkn2t907s92lmt"
     build: ./backend-flask
     ports:
       - "4567:4567"
